[gd_scene load_steps=6 format=2]

[ext_resource path="res://src/Objects/ObstacleSpawner.gd" type="Script" id=1]
[ext_resource path="res://src/Actors/Rock.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/Objects/Coin.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/Objects/Heart.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/Actors/Birb.tscn" type="PackedScene" id=5]

[node name="ObstacleSpawner" type="Position2D"]
script = ExtResource( 1 )
__meta__ = {
"_gizmo_extents_": 32.0
}
obstacles = [ ExtResource( 5 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 2 ) ]

[node name="SpawnTimer" type="Timer" parent="."]
one_shot = true

[node name="FloorCheck" type="RayCast2D" parent="."]
enabled = true
collision_mask = 4

[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]
